# MantisBT - A PHP based bugtracking system
# MantisBT is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 2 of the License, or
# (at your option) any later version.
#
# MantisBT is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with MantisBT.  If not, see <http://www.gnu.org/licenses/>.
2021-03- : V 0.2.3 (WIP)
     #15 Remove note text from private comments for non admin users
2020-05-07 : V 0.2.2
     #7 Export : add sum of total time
     #11 User timepackage listing add totals
     #12 Add sum off all timepackage in admin view
2020-04-21 : V 0.2.1
     Small improvements
     #8 Hide percent of invoice times to reporters
     #9 Hide "do_not_track_time" on bugnote form
     #10 Add pagination at the bottom of timepackage page
2020-04-08 : V 0.2.0
    #1 Add pagination on page HhTimePackage/timepackage
    #3 Add resume page in admin
    #4 Add date filter on page HhTimePackage/timepackage
    #5 Add export button on page HhTimePackage/timepackage
    #6 Compare deducted vs real time on bug detail page
2019-03-20 : V 0.1.0  Initial version