@@ -172,6 +172,37 @@ class TimePackage
     }
 
     /**
+     * Export Timepackage details grouped by bug id
+     * @param array $filters
+     * @return array
+     */
+    public function export_details_grouped($filters=array()){
+
+        $filtersConditions = '';
+        if (isset($filters) && count($filters)){
+            if ( isset($filters['date'])){
+                $filtersConditions = "AND n.date_submitted >= ".strtotime($filters['date']['from'])." AND n.date_submitted <=".strtotime($filters['date']['to'])."";
+            }
+        }
+
+        $t_db_query = "SELECT t.id as issue_id,t.summary,SUM(d.time) as minutes
+                       FROM " . plugin_table('timepackage_details') . " d
+                       INNER JOIN " . db_get_table('bugnote') . " n ON d.bugnote_id = n.id
+                       LEFT JOIN ".db_get_table('bug')." t ON d.bug_id = t.id
+                       WHERE d.project_id=" . db_param().'
+                       '.$filtersConditions.' 
+                       GROUP BY d.bug_id';
+
+        $t_query = db_query($t_db_query, array($this->_project_id));
+        $results = array();
+        while( $t_result = db_fetch_array($t_query)){
+            $results[] = $t_result;
+        }
+
+        return $results;
+    }
+
+    /**
      * Add Time to TimePackage
      * @param string $time time in HH:MM format
      * @param null $comment
