@@ -26,6 +26,8 @@ $s_plugin_HhTimePackage_timepackage_page_detail_filters = 'Filtres';
 $s_plugin_HhTimePackage_timepackage_apply_filters = 'Appliquer les filtres';
 $s_plugin_HhTimePackage_timepackage_reset_filters = 'Réinitialiser les filtres';
 $s_plugin_HhTimePackage_timepackage_export = 'Exporter';
+$s_plugin_HhTimePackage_timepackage_export_grouped = 'Exporter groupé par bug';
+$s_plugin_HhTimePackage_export_warning = 'Appliquer les filtres <strong>avant</strong> de cliquer sur les boutons d\'exports pour exporter les données filtrées par date';
 $s_plugin_HhTimePackage_filter_time = 'Temps du filtre';
 $s_plugin_HhTimePackage_global_time = 'Temps total déduit sur le projet';
 # add timepackage page
