@@ -191,6 +191,18 @@ if ($time < 0) {
                                                value="<?php echo plugin_lang_get('timepackage_export'); ?>"
                                                type="button"/>
                                     </a>
+                                    <a href="<?php echo plugin_page('export_grouped').'&params='.$t_tmp_filter_key; ?>">
+                                        <input class="btn btn-primary btn-sm btn-white btn-round"
+                                               value="<?php echo plugin_lang_get('timepackage_export_grouped'); ?>"
+                                               type="button"/>
+                                    </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="2">
+                                    <div class="alert alert-warning">
+                                        <?php echo plugin_lang_get('export_warning'); ?>
+                                    </div>
                                 </td>
                             </tr>
                         </table>
